@@ -2,6 +2,8 @@
 1.422     2007-07-13
           fixed header: why was it creating LFCR?
           normalize line endings to CRLF in body
+          improve reliability of existing line-ending code
+          improve tests
           packaging improvements
 
 1.420     2007-02-23
